Adding comments in pt_BR and es_ES to the .desktop file.

--- a/meganimus.desktop
+++ b/meganimus.desktop
@@ -4,6 +4,8 @@ Exec=meganimus
 Icon=applications-all
 StartupWMClass=meganimus
 Comment=A launcher for native and emulator games
+Comment[pt_BR]=Um launcher para jogos nativos e de emuladores
+Comment[es_ES]=Un lanzador para juegos nativos y emuladores
 Categories=Game;
 Keywords=gaming;emulator;portal;
 Terminal=false
